--- a/static/css/landing-page.css
+++ b/static/css/landing-page.css
@@ -44,6 +44,10 @@ h6 {
   font-weight: 700;
 }
 
+a {
+  color: #212e57;
+}
+
 .home-main-item h5 {
     letter-spacing: -1px;
     display: inline-block;
@@ -62,7 +66,7 @@ header.masthead {
 }
 
 .bg-orange {
-  background-color: #4abdac;
+  background-color: #212e57;
 }
 
 .btn-grey {
@@ -140,6 +144,15 @@ header.masthead {
   border-top-color: #ba1600;
 }
 
+.bg-yellow {
+  background-color: #fc4a1a;
+  border-color: #2b2b2b;
+}
+
+.text-blue {
+  color: #212e57;
+}
+
 .bg-kara {
   background-color: #ba1600;
   border-color: #ba1600;
@@ -160,6 +173,10 @@ header.masthead {
    border-color: #dd2400;
 }
 
+[v-cloak] {
+    display: none;
+  }
+
 .slot {
   border-top-width: 2px;
   border-top-color: #dd2400;
@@ -168,6 +185,57 @@ header.masthead {
 .transparent {
   background-color: transparent;
 }
+
+.spinner {
+    position: relative;
+    border: 4px solid #41b883;
+    animation: loader 2s infinite ease;
+    * {
+      line-height: 0;
+      box-sizing: border-box;
+    }
+  }
+  .loader-inner {
+    vertical-align: top;
+    display: inline-block;
+    width: 100%;
+    background-color: #41b883;
+    animation: loader-inner 2s infinite ease-in;
+  }
+  @keyframes loader {
+    0% {
+      transform: rotate(0deg);
+    }
+    25% {
+      transform: rotate(180deg);
+    }
+    50% {
+      transform: rotate(180deg);
+    }
+    75% {
+      transform: rotate(360deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+  @keyframes loader-inner {
+    0% {
+      height: 0%;
+    }
+    25% {
+      height: 0%;
+    }
+    50% {
+      height: 100%;
+    }
+    75% {
+      height: 100%;
+    }
+    100% {
+      height: 0%;
+    }
+  }
 
 @keyframes placeHolderShimmer{
   0%{
